[package]
authors = ["Colin Benner <colin@yzhs.de>"]
name = "time-report"
version = "0.1.0"

[dependencies]
dotenv = "0.10"
rocket = "0.3"
rocket_codegen = "0.3"
serde = "1.0"
serde_derive = "1.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dependencies.diesel]
features = ["chrono", "sqlite"]
version = "1.1"

[dependencies.diesel_infer_schema]
features = ["sqlite"]
version = "1.1"

[dependencies.rocket_contrib]
default-features = false
features = ["json", "handlebars_templates"]
version = "0.3"
