[package]
authors = ["Colin Benner <colin@yzhs.de>"]
name = "time-report"
version = "0.1.0"

[dependencies]
csv = "0.15.0"
curl = "0.4.11"
dotenv = "0.10"
dotenv_codegen = "0.11.0"
error-chain = "0.11.0"
handlebars = "0.32.0"
lazy_static = "1.0.0"
log = "0.4.1"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_cors = "0.2.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.10"
tempdir = "0.3.6"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dependencies.diesel]
features = ["chrono", "sqlite"]
version = "1.1"

[dependencies.diesel_infer_schema]
features = ["sqlite"]
version = "1.1"

[dependencies.rocket_contrib]
default-features = false
features = ["json", "handlebars_templates"]
version = "0.3"

[features]
clippy = []
default = []
